# startup-saas-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202604280001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/v1/: audit_logs.py  auth.py  projects.py  tasks.py  workspaces.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  audit_log.py  background_job.py  project.py  task.py  user.py  workspace.py
app/repositories/: audit_logs.py  background_jobs.py  projects.py  tasks.py  users.py  workspaces.py
app/schemas/: audit_log.py  auth.py  background_job.py  common.py  project.py  task.py  user.py  workspace.py
app/services/: audit_logs.py  auth.py  notifications.py  projects.py  tasks.py  workspaces.py
app/workers/: celery_app.py  jobs.py
tests/: conftest.py  test_auth.py  test_permissions.py  test_projects.py  test_tasks.py
